From Turbo to Lightning

--- a/configs/OmDet-Turbo_tiny_SWIN_T.yaml
+++ b/configs/OmDet-Turbo_tiny_SWIN_T.yaml
@@ -1,5 +1,6 @@
 MODEL:
-  META_ARCHITECTURE: OmDetV2Turbo
+  META_ARCHITECTURE: OmDetV2TurboInfer
+#  META_ARCHITECTURE: OmDetV2Turbo
   DEPLOY_MODE: true
   SWIN:
     OUT_FEATURES:
